1) README updated 2) IMDBHelper class updated 3) New model introduced called 'Movie' 4) Some code optimization and beautification. 5) Introduced BaseServlet which should be the DirectParent of the all Servlets. 6) and as usual some 'BugFixes'